# notifications-router

./: .env.dist  .gitignore  README.md  config.example.ini  config.example.toml  payload_signatures.md  pyproject.toml
.github/workflows/: pytest.yml
docs/: dodo notifier service.drawio
src/: config.py  consumer.py  db_api.py  events.py  exceptions.py  main.py  message_queue.py  models.py  report_identify.py  telegram.py  text_representations.py  text_utils.py  units_identify.py  utils.py  views.py
src/db/: consumer.py  db_api.py  mongo_db.py
src/enums/: __init__.py  write_off_types.py
src/models/: __init__.py  awaiting_orders.py  bonus_system_usage.py  canceled_orders.py  cooking_time.py  delivery_productivity.py  delivery_speed.py  event_types.py  events.py  heated_shelf_time.py  ingredient_stocks_balance.py  kitchen_productivity.py  late_delivery_vouchers_statistics.py  losses_and_excesses.py  productivity_balance.py  revenue_statistics.py  stop_sales_by_ingredients.py  stop_sales_by_sales_channels.py  suspicious_orders_by_phone_number.py  unit_stop_sales_by_ingredients.py  unit_stop_sales_by_sectors.py  write_offs.py
src/views/: __init__.py  awaiting_orders.py  bonus_system_usage.py  canceled_orders.py  common.py  cooking_time.py  delivery_productivity.py  delivery_speed.py  heated_shelf_time.py  ingredient_stocks_balance.py  kitchen_productivity.py  late_delivery_vouchers.py  losses_and_excesses.py  productivity_balance.py  revenue_statistics.py  stop_sales_by_ingredients.py  write_offs.py  (+4 more)
tests/: 40555_words_text.txt  conftest.py  fixtures.py  test_config.py  test_consumer.py  test_db_api.py  test_events.py  test_group_chat_ids_by_unit_id.py  test_identify_report.py  test_telegram.py  test_text_reports.py  test_text_utils.py  test_views.py
(+20 files in other folders)
