[tool.poetry]
name = "dodo__notifier-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.25.1"
pydantic = "^2.4.2"
humanize = "^4.8.0"
redis = "^5.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.poetry.group.dev.dependencies]
coverage = "^6.5.0"
factory-boy = "^3.3.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "src",
]